<resources>
    <string name="app_name">Technical Service</string>
    <!-- Literales constantes -->
    <string name="constant_technician_id">TECHNICIAN_ID</string>
    <string name="constant_technician_name">TECHNICIAN_NAME</string>
    <string name="constant_technician_text">Technician</string>

    <!-- Login -->
    <string name="login_username">Email:</string>
    <string name="login_username_hint">Write your email</string>
    <string name="login_password">Password:</string>
    <string name="login_password_hint">Write your password</string>
    <string name="login_text">Login</string>
    <string name="login_new_technician">New technician</string>
    <string name="login_error_message">Incorrect email or password</string>
    <string name="login_incomplete_fields">You must complete all fields</string>
    <string name="login_success">You have successfully logged in</string>

    <!-- New technician -->
    <string name="new_technician_text">Register new technician</string>
    <string name="new_technician_name">Name:</string>
    <string name="new_technician_write_name">Write your name</string>
    <string name="new_technician_last_name">Last name:</string>
    <string name="new_technician_write_last_name">Write your last name</string>
    <string name="new_technician_email">Email:</string>
    <string name="new_technician_write_email">Write your email</string>
    <string name="new_technician_password">Password:</string>
    <string name="new_technician_write_password">Write your password</string>
    <string name="new_technician_repeat_password">Repeat your Password:</string>
    <string name="new_technician_repeat_password_hint">Write your password again</string>
    <string name="new_technician_phone">Phone:</string>
    <string name="new_technician_write_phone">Write your phone</string>
    <string name="new_technician_btn_register">Register</string>
    <string name="new_technician_different_password">The passwords entered do not match</string>
    <string name="new_technician_exists_email">The email is already registered</string>
    <string name="new_technician_registration_ok">Successful registration</string>
    <string name="new_technician_invalid_email">Invalid email</string>


    <!-- Main Activity -->
    <string name="tech_service_message_login_ok">You are in</string>
    <string name="tech_service_welcome_text">Hi %s\nWelcome to Technical Service App</string>
    <string name="btn_manage_customers">Manage Customers</string>
    <string name="btn_manage_orders">Manage Orders</string>
    <string name="btn_manage_equipmet_types">Manage Equipments Types</string>
    <!-- Menu Main -->
    <string name="menu_action_config">Config</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_logout">Logout</string>

    <!-- Main Activity -->
    <string name="menu_item_config">Config</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_logout">Logout</string>

    <!-- States -->
    <string name="state_pending">Pending</string>
    <string name="state_progress">In progress</string>
    <string name="state_completed">Completed</string>
    <string name="state_cancelled">Cancelled</string>


    <!-- New Customer -->
    <string name="new_customer_text">Register new customer</string>
    <string name="new_customer_bt_save">Save customer</string>
    <string name="new_customer_name">Name</string>
    <string name="new_customer_last_name">Last name</string>
    <string name="new_customer_email">Email</string>
    <string name="new_customer_phone">Phone</string>
    <string name="new_customer_address">Address</string>
    <string name="new_customer_equipment_type">Equipment type</string>
    <string name="new_customer_serial_number">Serial number</string>
    <string name="new_customer_created_title">Customer created</string>
    <string name="new_customer_created_message">The customer has created correctly</string>
    <string name="new_customer_option_detail_customer">View client details</string>
    <string name="new_customer_option_create_another_customer">Add another client</string>
    <string name="new_customer_option_view_all_customers">View all clients</string>


    <!-- New Customer -->
    <string name="detail_customer_error_get_data">Error getting client data</string>

</resources>