<?xml version="1.0" encoding="utf-8"?>
<!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddCustomerActivity">

</androidx.constraintlayout.widget.ConstraintLayout>
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:paddingTop="64dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/new_customer_text"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>

        <EditText android:id="@+id/etName"
            android:hint="@string/new_customer_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etLastName"
            android:hint="@string/new_customer_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etEmail"
            android:hint="@string/new_customer_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etPhone"
            android:hint="@string/new_customer_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/eTAddress"
            android:hint="@string/new_customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/new_customer_equipment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>

        <Spinner
            android:id="@+id/spinnerEquipmentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/etSerialNumber"
            android:hint="@string/new_customer_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/btnSaveCustomer"
            android:text="@string/new_customer_bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

    </LinearLayout>
</ScrollView>
