<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tech_service_welcome_text"
        tools:text="Hola Técnico\nBienvenido a la app de Servicio Técnico"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginVertical="24dp" />

    <Button
        android:id="@+id/btnCustomers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_manage_customers"
        android:layout_marginVertical="24dp" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_manage_orders"
        android:layout_marginVertical="24dp" />

    <Button
        android:id="@+id/btnEquipmentTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_manage_equipmet_types"
        android:layout_marginVertical="24dp" />

</androidx.appcompat.widget.LinearLayoutCompat>